--- a/templates/base.html
+++ b/templates/base.html
@@ -60,13 +60,13 @@
 
     <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXX-Y"></script>
-  <script>
+  {% comment %} <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-NFJNSPTPDY');
-  </script> 
+    gtag('config', '');
+  </script>  {% endcomment %}
   
 </head>
 
