Google Tacking Disabled

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,13 +59,13 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXX-Y"></script>
-  {% comment %} <script>
+  {% comment %} <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXX-Y"></script>
+  <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', '');
+    gtag('config', 'G-NFJNSPTPDY');
   </script>  {% endcomment %}
   
 </head>
